--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   <div class="bg-white p-8 rounded shadow-md w-full max-w-sm relative">
     <h2 class="text-2xl font-bold text-center mb-6">Login Required</h2>
 
-    <input id="loginUSERNAME" type="text" placeholder="USERNAME"
+    <input id="loginUSERNAME" type="text" placeholder="Masukkan Username"
       class="w-full border rounded px-4 py-2 mb-3 focus:ring focus:ring-blue-200">
 
-    <input id="loginPASSWORD" type="PASSWORD" placeholder="PASSWORD"
+    <input id="loginPASSWORD" type="PASSWORD" placeholder="Masukkan Password"
       class="w-full border rounded px-4 py-2 mb-4 focus:ring focus:ring-blue-200">
 
     <button onclick="doLogin()"
